fixing overflow due to space at bottom

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -9,6 +9,7 @@ $border : 2px solid red;
 
 html, body {
     margin: 0;
+    overflow: scroll;
 }
 
 .wrapper {
@@ -132,8 +133,8 @@ html, body {
     z-index: 100;
     padding: 0;
     margin: 0;
-
     cursor: pointer;
+
     &:nth-child(1) {
         top:0px;
     } 
